--- a/checkout.html
+++ b/checkout.html
@@ -11,6 +11,7 @@
     <style>
         :root { --bg-dark:#050505; --card-bg:#111; --accent:#d4af37; --text-main:#eee; --border:1px solid #333; }
         * { box-sizing:border-box; margin:0; padding:0; }
+        html, body { overflow-x: hidden; max-width: 100%; }
         body { font-family:'Lato',sans-serif; background:var(--bg-dark); color:var(--text-main); padding:0; min-height:100vh; }
         .trust-bar { background:#0a0a0a; border-bottom:1px solid #222; padding:12px 5%; text-align:center; color:#888; font-size:0.85rem; }
         .trust-bar i { color:#4CAF50; margin-right:5px; }
@@ -37,7 +38,7 @@
         .form-group { margin-bottom:20px; }
         label { display:block; margin-bottom:8px; font-size:0.8rem; color:#888; text-transform:uppercase; letter-spacing:1px; }
         label .required { color:#f44336; }
-        input, textarea { width:100%; background:#080808; border:1px solid #333; color:white; padding:16px; font-family:'Lato',sans-serif; font-size:1rem; transition:border 0.3s; }
+        input, textarea { width:100%; max-width:100%; background:#080808; border:1px solid #333; color:white; padding:16px; font-family:'Lato',sans-serif; font-size:1rem; transition:border 0.3s; }
         input:focus, textarea:focus { border-color:var(--accent); outline:none; }
         input.error, textarea.error { border-color:#f44336; }
         .error-message { color:#f44336; font-size:0.8rem; margin-top:5px; display:none; }
@@ -59,7 +60,7 @@
         .guarantee-badge { background:rgba(76,175,80,0.1); border:1px solid rgba(76,175,80,0.3); padding:15px; margin-top:20px; color:#4CAF50; font-size:0.85rem; text-align:center; }
         .guarantee-badge i { font-size:1.5rem; display:block; margin-bottom:10px; }
         @media (max-width:850px) { .checkout-container { grid-template-columns:1fr; gap:25px; padding:25px 10px 60px; } .order-summary { position:static; order:-1; } .row { grid-template-columns:1fr; gap:15px; } }
-        @media (max-width:768px) { .trust-bar { padding:10px 3%; font-size:0.75rem; } .progress-bar { padding:20px 3%; } .step-circle { width:30px; height:30px; font-size:0.8rem; } .step-label { font-size:0.6rem; } .checkout-container { padding:20px 8px 60px; gap:20px; } .card { padding:20px 15px; } .section-header { font-size:1.3rem; padding-bottom:12px; margin-bottom:20px; gap:10px; } .product-preview { flex-direction:column; text-align:center; padding:15px; gap:15px; } .product-preview img { width:80px; height:80px; } .order-summary { padding:20px 15px; } .qr-code img { max-width:160px; margin:20px 0; border-width:8px; } .upi-id { padding:12px; font-size:0.85rem; flex-wrap:wrap; justify-content:center; } .confirm-btn { padding:15px 25px; font-size:0.9rem; letter-spacing:1px; } .guarantee-badge { padding:12px; margin-top:15px; font-size:0.75rem; } .secure-badge { margin-top:15px; font-size:0.7rem; } .success-content { padding:30px 20px; margin:15px; } }
+        @media (max-width:768px) { .trust-bar { padding:10px 3%; font-size:0.75rem; } .progress-bar { padding:20px 3%; } .step-circle { width:30px; height:30px; font-size:0.8rem; } .step-label { font-size:0.6rem; } .checkout-container { padding:20px 8px 60px; gap:20px; } .card { padding:20px 15px; max-width:100%; overflow:hidden; } .section-header { font-size:1.3rem; padding-bottom:12px; margin-bottom:20px; gap:10px; } .product-preview { flex-direction:column; text-align:center; padding:15px; gap:15px; } .product-preview img { width:80px; height:80px; } .order-summary { padding:20px 15px; max-width:100%; } .qr-code img { max-width:160px; margin:20px 0; border-width:8px; } .upi-id { padding:12px; font-size:0.85rem; flex-wrap:wrap; justify-content:center; } .confirm-btn { padding:15px 25px; font-size:0.9rem; letter-spacing:1px; } .guarantee-badge { padding:12px; margin-top:15px; font-size:0.75rem; } .secure-badge { margin-top:15px; font-size:0.7rem; } .success-content { padding:30px 20px; margin:15px; } }
         @media (max-width:380px) { .section-header { font-size:1.1rem; } .product-preview img { width:70px; height:70px; } .qr-code img { max-width:140px; } }
         .success-modal { display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.95); z-index:9999; align-items:center; justify-content:center; }
         .success-content { background:var(--card-bg); border:2px solid var(--accent); padding:50px 40px; text-align:center; max-width:500px; margin:20px; }
@@ -253,7 +254,7 @@ async function loadCouponsFromServer() {
         const result = await res.json();
         if (Array.isArray(result.coupons)) {
             availableCoupons = result.coupons;
-            console.log('Coupons loaded:', JSON.stringify(availableCoupons));
+
         }
     } catch (e) {
         console.warn('Coupon load failed:', e);
@@ -305,9 +306,10 @@ function loadCartItems() {
     var html = '<div><h3 style="color:var(--accent);margin-bottom:15px;font-size:1rem;font-family:\'Cinzel\',serif;"><i class="fa-solid fa-shopping-bag"></i> Your Items (' + cart.length + ')</h3>';
     cart.forEach(function(item) {
         var line = (Number(item.price) * Number(item.quantity)).toLocaleString('en-IN');
+        var safeName = String(item.name).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;');
         html += '<div style="display:flex;gap:12px;padding:12px;background:rgba(255,255,255,0.02);border-radius:6px;margin-bottom:10px;border:1px solid #222;align-items:center;">'
-            + '<img src="' + item.image + '" style="width:50px;height:50px;object-fit:cover;border-radius:4px;border:1px solid var(--accent);flex-shrink:0;">'
-            + '<div style="flex:1;min-width:0;"><div style="color:white;font-weight:500;font-size:0.9rem;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">' + item.name + '</div>'
+            + '<img src="' + item.image + '" style="width:50px;height:50px;object-fit:cover;border-radius:4px;border:1px solid var(--accent);flex-shrink:0;" onerror="this.style.display=\'none\'">'
+            + '<div style="flex:1;min-width:0;"><div style="color:white;font-weight:500;font-size:0.9rem;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">' + safeName + '</div>'
             + '<div style="color:#888;font-size:0.8rem;">&#8377;' + Number(item.price).toLocaleString('en-IN') + ' &times; ' + item.quantity + '</div></div>'
             + '<div style="color:var(--accent);font-weight:bold;font-size:0.95rem;flex-shrink:0;">&#8377;' + line + '</div></div>';
     });
@@ -328,11 +330,11 @@ function applyCoupon() {
     }
     if (!match) { showCouponMsg('&#10060; Invalid coupon code.', 'error'); appliedCoupon = null; return; }
 
-    console.log('Match:', JSON.stringify(match));
+
 
     // Step 2: expiry check
     var expiry = parseExpiry(match.expiryDate);
-    console.log('Expiry parsed:', expiry, '| Now:', new Date());
+
     if (expiry !== null && new Date() > expiry) {
         showCouponMsg('&#10060; This coupon has expired.', 'error');
         appliedCoupon = null; return;
@@ -343,7 +345,7 @@ function applyCoupon() {
     var subtotal = 0;
     for (var j = 0; j < cart.length; j++) { subtotal += Number(cart[j].price || 0) * Number(cart[j].quantity || 0); }
     var minAmt = Number(match.minimumAmount) || 0;
-    console.log('Subtotal:', subtotal, '| Min required:', minAmt);
+
 
     if (minAmt > 0 && subtotal < minAmt) {
         showCouponMsg('&#10060; Minimum order of &#8377;' + minAmt.toLocaleString('en-IN')
@@ -446,7 +448,7 @@ document.querySelectorAll('input, textarea').forEach(function(inp) {
 //  SUBMIT ORDER 
 async function handleSubmit(event) {
     event.preventDefault();
-    if (!validateForm()) { alert('Please fill all required fields correctly'); return; }
+    if (!validateForm()) return; // errors shown inline — no alert needed
     var cart = ShoppingCart.getCart();
     if (cart.length === 0) { alert('Your cart is empty!'); return; }
 
@@ -466,19 +468,21 @@ async function handleSubmit(event) {
 
     var items = '';
     cart.forEach(function(item, i) {
-        items += (i+1) + '. ' + item.name + ' x' + item.quantity + ' = Rs.' + (Number(item.price)*Number(item.quantity)).toLocaleString('en-IN') + '%0A';
+        items += (i+1) + '. ' + item.name + ' x' + item.quantity + ' = Rs.' + (Number(item.price)*Number(item.quantity)).toLocaleString('en-IN') + '\n';
     });
-    var coup = t.couponCode ? 'Coupon (' + t.couponCode + '): -Rs.' + (t.discount||0).toLocaleString('en-IN') + '%0A' : '';
+    var coup = t.couponCode ? 'Coupon (' + t.couponCode + '): -Rs.' + (t.discount||0).toLocaleString('en-IN') + '\n' : '';
 
-    var msg = '*NEW ORDER - SWARNIM JEWELS*%0A%0A'
-        + '*Customer*%0AName: ' + f.name + '%0APhone: ' + f.phone + '%0AEmail: ' + f.email + '%0A%0A'
-        + '*Items*%0A' + items + '%0A'
-        + '*Summary*%0ASubtotal: Rs.' + (t.subtotal||0).toLocaleString('en-IN') + '%0A'
+    var msgRaw = '*NEW ORDER - SWARNIM JEWELS*\n\n'
+        + '*Customer*\nName: ' + f.name + '\nPhone: ' + f.phone + '\nEmail: ' + f.email + '\n\n'
+        + '*Items*\n' + items + '\n'
+        + '*Summary*\nSubtotal: Rs.' + (t.subtotal||0).toLocaleString('en-IN') + '\n'
         + coup
-        + 'Shipping: ' + (t.shipping === 0 ? 'FREE' : 'Rs.' + t.shipping) + '%0A'
-        + '*TOTAL PAID: Rs.' + (t.total||0).toLocaleString('en-IN') + '*%0A%0A'
-        + '*Delivery Address*%0A' + f.address + '%0A' + f.city + ' - ' + f.pincode + '%0A%0A'
+        + 'Shipping: ' + (t.shipping === 0 ? 'FREE' : 'Rs.' + Number(t.shipping).toLocaleString('en-IN')) + '\n'
+        + '*TOTAL PAID: Rs.' + (t.total||0).toLocaleString('en-IN') + '*\n\n'
+        + '*Delivery Address*\n' + f.address + '\n' + f.city + ' - ' + f.pincode + '\n\n'
         + '_Placed via Swarnim Jewels website_';
+
+    var msg = encodeURIComponent(msgRaw);
 
     try {
         var userId = (window.UserSystem && typeof window.UserSystem.getCurrentUser === 'function')
@@ -492,21 +496,30 @@ async function handleSubmit(event) {
         });
     } catch(e) { console.warn('Order save (non-critical):', e); }
 
-    document.querySelectorAll('.step')[0].classList.add('completed');
-    document.querySelectorAll('.step')[1].classList.add('active');
-    document.querySelector('.progress-line').style.width = '66%';
+    try {
+        document.querySelectorAll('.step')[0].classList.add('completed');
+        document.querySelectorAll('.step')[1].classList.add('active');
+        document.querySelector('.progress-line').style.width = '66%';
 
-    window.open('https://wa.me/' + CONFIG.WHATSAPP_NUMBER + '?text=' + msg, '_blank');
+        window.open('https://wa.me/' + CONFIG.WHATSAPP_NUMBER + '?text=' + msg, '_blank');
 
-    setTimeout(function() {
-        document.querySelectorAll('.step')[1].classList.add('completed');
-        document.querySelectorAll('.step')[2].classList.add('active');
-        document.querySelector('.progress-line').style.width = '100%';
         setTimeout(function() {
-            document.getElementById('successModal').style.display = 'flex';
-            ShoppingCart.clear();
-        }, 500);
-    }, 1000);
+            document.querySelectorAll('.step')[1].classList.add('completed');
+            document.querySelectorAll('.step')[2].classList.add('active');
+            document.querySelector('.progress-line').style.width = '100%';
+            setTimeout(function() {
+                document.getElementById('successModal').style.display = 'flex';
+                ShoppingCart.clear();
+            }, 500);
+        }, 1000);
+
+    } catch(e) {
+        // If anything fails, re-enable the button so user can retry
+        console.error('Order submission error:', e);
+        btn.disabled  = false;
+        btn.innerHTML = 'Place Order';
+        alert('Something went wrong. Please try again.');
+    }
 }
 </script>
 </body>
