--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shipping Policy | Swarnim Collection</title>
+    <title>Shipping Policy | Swarnim Jewels</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -36,7 +38,7 @@
     </ul>
 
     <h3>3. Shipping Charges</h3>
-    <p>We offer <strong>FREE Shipping</strong> on all prepaid orders above ₹999. A flat rate of ₹80 applies to orders below this amount.</p>
+    <p>We offer <strong>FREE Shipping</strong> on all prepaid orders above ₹1,299. A flat rate of ₹80 applies to orders below this amount.</p>
 
     <h3>4. Order Tracking</h3>
     <p>Once your order is shipped, you will receive a tracking link via WhatsApp and Email.</p>
