privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Swarnim Jewels</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
             --primary: #0a0a0a;
@@ -232,7 +233,7 @@
             <p>If you have any questions about this Privacy Policy or our data practices, please contact us:</p>
             <ul style="list-style: none; margin-left: 0;">
                 <li><strong>Phone:</strong> <a href="tel:+918218768602">+91 8218768602</a></li>
-                <li><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection#62111503100c0b0f080715070e1122071a030f120e074c010d0f"><span class="__cf_email__" data-cfemail="51222630233f383c3b3426343d22113429303c213d347f323e3c">[email&#160;protected]</span></a></li>
+                <li><strong>Email / WhatsApp:</strong> <a href="https://wa.me/918218768602">Contact us on WhatsApp</a></li>
                 <li><strong>WhatsApp:</strong> <a href="https://wa.me/918218768602">+91 8218768602</a></li>
             </ul>
             <p style="margin-top: 15px; font-size: 0.9rem; opacity: 0.8;">We typically respond to privacy inquiries within 24-48 hours.</p>
