--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <title>Swarnim Jewels | Exclusive Handcrafted Jewelry</title>
     <meta name="description" content="Discover Swarnim Jewels' exclusive handcrafted oxidized silver, kundan, and gold-plated jewelry.">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/swarnim_jewels_favicon.svg">
+    <link rel="shortcut icon" type="image/svg+xml" href="/swarnim_jewels_favicon.svg">
+
+    <!-- Logo for Google Search -->
+    <link rel="image_src" href="https://swarnimjewels.com/swarnim_jewels_logo.svg">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-62YWZSKSRO"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-62YWZSKSRO');
+    </script>
+
+    <!-- Schema Markup: Tells Google to show your logo in search results -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Swarnim Jewels",
+      "url": "https://swarnimjewels.com",
+      "logo": "https://swarnimjewels.com/swarnim_jewels_favicon.svg",
+      "sameAs": [
+        "https://swarnimjewels.com"
+      ]
+    }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
