--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Swarnim Jewels | Exclusive Handcrafted Jewelry</title>
     <meta name="description" content="Discover Swarnim Jewels' exclusive handcrafted oxidized silver, kundan, and gold-plated jewelry.">
     
-    <!-- Favicon -->
+    <!-- Favicon (Google Search + browsers) -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" href="/favicon-48.png" sizes="48x48">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <!-- Optional: keep SVG favicon for modern browsers -->
     <link rel="icon" type="image/svg+xml" href="/swarnim_jewels_favicon.svg">
-    <link rel="shortcut icon" type="image/svg+xml" href="/swarnim_jewels_favicon.svg">
 
     <!-- Logo for Google Search -->
     <link rel="image_src" href="https://swarnimjewels.com/swarnim_jewels_logo.svg">
@@ -29,7 +33,7 @@
       "@type": "Organization",
       "name": "Swarnim Jewels",
       "url": "https://swarnimjewels.com",
-      "logo": "https://swarnimjewels.com/swarnim_jewels_favicon.svg",
+      "logo": "https://swarnimjewels.com/swarnim_jewels_logo.svg",
       "sameAs": [
         "https://swarnimjewels.com"
       ]
