--- a/account.html
+++ b/account.html
@@ -117,6 +117,14 @@
     @keyframes spin{to{transform:rotate(360deg);}}
     .spinner{width:14px;height:14px;border:2px solid rgba(0,0,0,.3);border-top-color:#000;border-radius:50%;animation:spin .6s linear infinite;}
 
+    /* inline confirm toast */
+    .confirm-toast{position:fixed;bottom:30px;left:50%;transform:translateX(-50%);background:#1a1a1a;border:1px solid rgba(212,175,55,.4);border-radius:10px;padding:18px 24px;z-index:99999;display:flex;align-items:center;gap:16px;box-shadow:0 8px 32px rgba(0,0,0,.6);font-size:.9rem;color:#eee;white-space:nowrap;}
+    .confirm-toast .ct-btns{display:flex;gap:10px;}
+    .ct-yes{padding:7px 18px;background:#e57373;border:none;border-radius:5px;color:#fff;cursor:pointer;font-size:.82rem;font-weight:700;}
+    .ct-yes:hover{background:#c62828;}
+    .ct-no{padding:7px 18px;background:#333;border:1px solid #555;border-radius:5px;color:#eee;cursor:pointer;font-size:.82rem;}
+    .ct-no:hover{border-color:var(--gold);}
+
     footer{text-align:center;padding:24px;color:var(--muted);font-size:.8rem;border-top:1px solid rgba(255,255,255,.05);}
     footer a{color:var(--gold);text-decoration:none;}
 
@@ -287,10 +295,27 @@
     if (name === 'wishlist')  renderWishlist();
   }
 
+  // ── INLINE CONFIRM (replaces browser confirm()) ────────────
+  function sjConfirm(message, onYes) {
+    const existing = document.getElementById('sj-confirm-toast');
+    if (existing) existing.remove();
+    const t = document.createElement('div');
+    t.id = 'sj-confirm-toast';
+    t.className = 'confirm-toast';
+    t.innerHTML = `<span>${message}</span><div class="ct-btns">
+      <button class="ct-no" id="ct-no">Cancel</button>
+      <button class="ct-yes" id="ct-yes">Yes, proceed</button>
+    </div>`;
+    document.body.appendChild(t);
+    document.getElementById('ct-no').onclick  = () => t.remove();
+    document.getElementById('ct-yes').onclick = () => { t.remove(); onYes(); };
+  }
+
   // ── LOGOUT ────────────────────────────────────────────────
   async function handleLogout() {
-    if (!confirm('Sign out of your account?')) return;
-    await UserSystem.logout();
+    sjConfirm('Sign out of your account?', async () => {
+      await UserSystem.logout();
+    });
   }
 
   // ── ORDERS ────────────────────────────────────────────────
@@ -391,11 +416,15 @@
   let addrList   = [];
 
   async function loadAddresses() {
-    addrLoaded = true;
+    addrLoaded = true; // Optimistic: prevent duplicate concurrent loads
     let result;
     try { result = await UserSystem.getAddresses(); }
-    catch(e) { result = { success:false, addresses:[] }; }
+    catch(e) {
+      addrLoaded = false; // Allow retry if network fails
+      result = { success:false, addresses:[] };
+    }
     document.getElementById('addrLoading').style.display = 'none';
+    if (!result.success) addrLoaded = false; // Allow retry on API error too
     addrList = (result.success && result.addresses) ? result.addresses : [];
     renderAddresses();
   }
@@ -451,7 +480,7 @@
       phone: document.getElementById('m_phone').value.trim()
     };
     if (!addr.name || !addr.line || !addr.city || !addr.pin) {
-      alert('Please fill Name, Address Line, City and PIN Code.'); return;
+      ShoppingCart.showNotification('⚠️ Please fill Name, Address Line, City and PIN Code.', 'error'); return;
     }
     btn.disabled = true;
     btn.innerHTML = '<div class="spinner"></div> Saving…';
@@ -460,26 +489,25 @@
       if (r.success) {
         addrList = r.addresses || [...addrList, addr];
         renderAddresses();
-        closeModal();
-        // Clear fields only on success
-        ['m_name','m_line','m_city','m_state','m_pin','m_phone'].forEach(id => document.getElementById(id).value='');
+        closeModal(); // closeModal() already clears all fields
       } else {
-        alert(r.error || 'Failed to save address.');
+        ShoppingCart.showNotification('⚠️ ' + (r.error || 'Failed to save address.'), 'error');
       }
-    } catch(e) { alert('Network error. Please try again.'); }
+    } catch(e) { ShoppingCart.showNotification('⚠️ Network error. Please try again.', 'error'); }
     btn.disabled = false;
     btn.innerHTML = '<i class="fa-solid fa-floppy-disk"></i> Save Address';
   }
 
   async function deleteAddress(idx) {
-    if (!confirm('Remove this address?')) return;
-    const prev = [...addrList];
-    addrList.splice(idx, 1);
-    renderAddresses(); // optimistic
-    try {
-      const r = await UserSystem.replaceAddresses(addrList);
-      if (!r.success) { addrList = prev; renderAddresses(); alert(r.error || 'Failed to delete.'); }
-    } catch(e) { addrList = prev; renderAddresses(); alert('Network error.'); }
+    sjConfirm('Remove this address?', async () => {
+      const prev = [...addrList];
+      addrList.splice(idx, 1);
+      renderAddresses(); // optimistic
+      try {
+        const r = await UserSystem.replaceAddresses(addrList);
+        if (!r.success) { addrList = prev; renderAddresses(); ShoppingCart.showNotification('⚠️ ' + (r.error || 'Failed to delete.'), 'error'); }
+      } catch(e) { addrList = prev; renderAddresses(); ShoppingCart.showNotification('⚠️ Network error.', 'error'); }
+    });
   }
 
   // ── WISHLIST ──────────────────────────────────────────────
@@ -492,25 +520,59 @@
         <p style="margin-top:10px"><a href="index.html">Explore products →</a></p></div>`;
       return;
     }
-    el.innerHTML = '<div class="wgrid">' + list.map(item => `
-      <div class="witem">
-        <img class="wimg"
-          src="${esc(item.image||'')}"
-          onerror="this.src='https://placehold.co/200x150/111/444?text=No+Image'"
-          alt="${esc(item.name)}" loading="lazy">
-        <div class="winfo">
-          <div class="wname">${esc(item.name)}</div>
-          <div class="wprice">₹${Number(item.price||0).toLocaleString('en-IN')}</div>
-        </div>
-        <div class="wacts">
-          <button class="btn-sm btn-add" onclick="addToCart('${esc(item.id)}',this)">
-            <i class="fa-solid fa-cart-plus"></i> Add
-          </button>
-          <button class="btn-sm btn-del" onclick="removeWish('${esc(item.id)}')">
-            <i class="fa-solid fa-heart-crack"></i>
-          </button>
-        </div>
-      </div>`).join('') + '</div>';
+    // Build DOM safely — NO inline onclick with user data (XSS prevention)
+    const grid = document.createElement('div');
+    grid.className = 'wgrid';
+
+    list.forEach(item => {
+      const card = document.createElement('div');
+      card.className = 'witem';
+
+      // Image
+      const img = document.createElement('img');
+      img.className = 'wimg';
+      img.src = item.image || '';
+      img.alt = item.name || '';
+      img.loading = 'lazy';
+      img.onerror = function() { this.src = 'https://placehold.co/200x150/111/444?text=No+Image'; };
+
+      // Info
+      const info = document.createElement('div');
+      info.className = 'winfo';
+      const nameEl = document.createElement('div');
+      nameEl.className = 'wname';
+      nameEl.textContent = item.name || '';
+      const priceEl = document.createElement('div');
+      priceEl.className = 'wprice';
+      priceEl.textContent = '₹' + Number(item.price || 0).toLocaleString('en-IN');
+      info.appendChild(nameEl);
+      info.appendChild(priceEl);
+
+      // Actions — attach events via JS, never inline onclick with data
+      const acts = document.createElement('div');
+      acts.className = 'wacts';
+
+      const addBtn = document.createElement('button');
+      addBtn.className = 'btn-sm btn-add';
+      addBtn.innerHTML = '<i class="fa-solid fa-cart-plus"></i> Add';
+      addBtn.addEventListener('click', function() { addToCart(String(item.id), addBtn); });
+
+      const delBtn = document.createElement('button');
+      delBtn.className = 'btn-sm btn-del';
+      delBtn.innerHTML = '<i class="fa-solid fa-heart-crack"></i>';
+      delBtn.addEventListener('click', function() { removeWish(String(item.id)); });
+
+      acts.appendChild(addBtn);
+      acts.appendChild(delBtn);
+
+      card.appendChild(img);
+      card.appendChild(info);
+      card.appendChild(acts);
+      grid.appendChild(card);
+    });
+
+    el.innerHTML = '';
+    el.appendChild(grid);
   }
 
   function removeWish(id) { UserSystem.toggleWishlist({ id }); renderWishlist(); }
@@ -524,7 +586,7 @@
       btn.disabled = true;
       setTimeout(() => { btn.innerHTML = '<i class="fa-solid fa-cart-plus"></i> Add'; btn.disabled = false; }, 1500);
     } else {
-      alert('Cart not loaded. Please refresh.');
+      ShoppingCart.showNotification('⚠️ Cart not loaded. Please refresh.', 'error');
     }
   }
 
